syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "DM/api/employee/v1;v1";

option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Employee",
		version: "1.0",
		contact: {
			name: "Department managerment project",
			url: "https://github.com/grpc-ecosystem/grpc-gateway",
			email: "none@example.com",
		},
		license: {
			name: "BSD 3-Clause License",
			url: "https://github.com/grpc-ecosystem/grpc-gateway/blob/master/LICENSE.txt",
		},
		extensions: {
			key: "x-something-something",
			value {
				string_value: "yadda",
			}
		}
  }
};

service EmployeeService{
    rpc CreateEmployee(CreateEmployeeRequest) returns (CreateEmployeeRespone){
        option (google.api.http) = {
            post: "/employees"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            external_docs: {
              url: "https://github.com/grpc-ecosystem/grpc-gateway",
              description: "Create an employee"
            }
        };
    };

    rpc GetAllEmployee(GetAllEmployeeRequest) returns (GetAllEmployeeRespone){
        option (google.api.http) = {
            get: "/employees"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            external_docs: {
              url: "https://github.com/grpc-ecosystem/grpc-gateway",
              description: "Get all employee"
            }
        };
    }

    rpc GetEmployeeByPage(GetEmployeeByPageRequest) returns (GetEmployeeByPageRespone){
        option (google.api.http) = {
            get : "/employees/page"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            external_docs: {
              url: "https://github.com/grpc-ecosystem/grpc-gateway",
              description: "Get employee per page"
            }
        };
    }

    rpc GetEmployeeByID(GetEmployeeByIDResquest) returns (GetEmployeeByIDRespone){
        option (google.api.http) = {
            get: "/employees/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            external_docs: {
              url: "https://github.com/grpc-ecosystem/grpc-gateway",
              description: "Get employee by ID"
            }
        };
    }

    rpc UpdateEmployee(UpdateEmployeeResquest) returns (UpdateEmployeeRespone){
        option (google.api.http) = {
            put: "/employees/{id}"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            external_docs: {
              url: "https://github.com/grpc-ecosystem/grpc-gateway",
              description: "Update an employee"
            }
        };
    }

    rpc DeleteEmployee(DeleteEmployeeResquest) returns (DeleteEmployeeRespone){
        option (google.api.http) = {
            delete: "/employees/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            external_docs: {
              url: "https://github.com/grpc-ecosystem/grpc-gateway",
              description: "Delete an employee"
            }
        };
    }

    rpc GetEmployeeByPhonePass(GetEmployeeByPhonePassRequest) returns (GetEmployeeByPhonePassRespone);
}

message CreateEmployeeRequest{
    string name = 1;
    string phone = 2;
    string password = 3;
    string role = 4;
    uint32 salary = 5;
    uint32 sub_department_id = 6;
}

message CreateEmployeeRespone{
    uint32 id = 1;
}

message GetAllEmployeeRequest{}

message GetAllEmployeeRespone{
    repeated Employee employees = 1;
}

message GetEmployeeByIDResquest{
    uint32 id = 1;
}

message GetEmployeeByIDRespone{
    uint32 id = 1;
    string name = 2;
    string phone = 3;
    string password = 4;
    string role = 5;
    uint32 salary = 6;
    uint32 sub_department_id = 7;
}

message UpdateEmployeeResquest{
    uint32 id = 1;
    string name = 2;
    string phone = 3;
    string password = 4;
    string role = 5;
    uint32 salary = 6;
    uint32 sub_department_id = 7;
}

message UpdateEmployeeRespone{}

message DeleteEmployeeResquest{
    uint32 id = 1;
}

message DeleteEmployeeRespone{}

message GetEmployeeByPhonePassRequest{
    string phone = 1;
    //string password = 2;
}

message GetEmployeeByPhonePassRespone{
    //uint32 id = 1;
    string phone = 1;
    string password = 2;
    string role = 3;
}

message GetEmployeeByPageRequest{
    uint32 page = 1;
    uint32 limit = 2;
}

message GetEmployeeByPageRespone{
    repeated Employee employees = 1;
}

message Employee{
    uint32 id = 1;
    string name = 2;
    string phone = 3;
    string password = 4;
    uint32 salary = 5;
    string role = 6;
    uint32 sub_department_id = 7;
}