syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";
import "employee.proto";
option go_package = "DM/api/helloworld/v1;v1";

option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

service SubDepartmentService{
    rpc CreateSubDepartment(CreateSubDepartmentRequest) returns (CreateSubDepartmentRespone){
        option (google.api.http) = {
            post: "/sub_departments"
            body: "*"
        };
    };

    rpc GetAllSubDepartment(GetAllSubDepartmentRequest) returns (GetAllSubDepartmentRespone){
        option (google.api.http) = {
            get: "/sub_departments"
        };
    }

    rpc GetSubDepartmentByID(GetSubDepartmentByIDResquest) returns (GetSubDepartmentByIDRespone){
        option (google.api.http) = {
            get: "/sub_departments/{id}"
        };
    }

    rpc UpdateSubDepartment(UpdateSubDepartmentResquest) returns (UpdateSubDepartmentRespone){
        option (google.api.http) = {
            put: "/sub_departments/{id}"
            body: "*"
        };
    }

    rpc DeleteSubDepartment(DeleteSubDepartmentResquest) returns (DeleteSubDepartmentRespone){
        option (google.api.http) = {
            delete: "/sub_departments/{id}"
        };
    }
}

message CreateSubDepartmentRequest{
    string name = 1;
    uint32 department_id = 2;
}

message CreateSubDepartmentRespone{
    uint32 id = 1;
}

message GetAllSubDepartmentRequest{}

message GetAllSubDepartmentRespone{
    repeated SubDepartment subdepartments = 1;
}

message GetSubDepartmentByIDResquest{
    uint32 id = 1;
}

message GetSubDepartmentByIDRespone{
    uint32 id = 1;
    string name = 2;
}

message UpdateSubDepartmentResquest{
    uint32 id = 1;
    string name = 2;
    uint32 department_id = 3;
}

message UpdateSubDepartmentRespone{}

message DeleteSubDepartmentResquest{
    uint32 id = 1;
}

message DeleteSubDepartmentRespone{}

message SubDepartment{
    uint32 id = 1;
    string name = 2;
    uint32 department_id = 3;
    repeated Employee employees = 4;
}