syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "DM/api/helloworld/v1;v1";

option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

service UserService{
    rpc SignUpUser(SignUpUserRequest) returns (SignUpUserRespone){
        option (google.api.http) = {
            post: "/users"
            body: "*"
        };
    };

    rpc SignInUser(SignInUserRequest) returns (SignInUserRespone){
        option (google.api.http) = {
            post: "/users/signin"
            body: "*"
        };
    };

    rpc GetAllUser(GetAllUserRequest) returns (GetAllUserRespone){
        option (google.api.http) = {
            get: "/users"
        };
    };
    
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserRespone){
        option (google.api.http) = {
            delete: "/users/{id}"
        };
    };

    rpc RefreshAccessToken(RefreshAccessTokenRequest) returns (RefreshAccessTokenRespone){
        option (google.api.http) = {
            post : "/users/refresh_access_token"
            body : "*"
        };
    }
}

message SignUpUserRequest{
    string phone = 1;
    string password = 2;
    string confirmpass = 3;
    bool is_employee = 4;
    string role = 5;
}

message SignUpUserRespone{
    uint32 id = 1;
    string phone = 2;
    string password = 3;
    bool is_employee = 4;
    string role = 5;
}

message SignInUserRequest{
    string phone = 1;
    string password = 2;
    string role = 3;
}

message SignInUserRespone{
    string access_token = 1;
    string refresh_token = 2;
}

message GetAllUserRequest{}

message GetAllUserRespone{
    repeated User users = 1;
}

message DeleteUserRequest{
    uint32 id = 1;
}

message DeleteUserRespone{}

message RefreshAccessTokenRequest{
    string refresh_token = 1;
}

message RefreshAccessTokenRespone{
    string access_token = 1;
}
message User{
    uint32 id = 1;
    string phone = 2;
    string password = 3;
    string confirmpass = 4;
    bool is_employee = 5;
    string role = 6;
    string access_token = 7;
    string refresh_token = 8;
}